temp removed rubocop test

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,9 +17,9 @@ environment:
     -
       RUBY_VERSION: 24-x64
       CHECK: metadata_lint
-    -
-      RUBY_VERSION: 24-x64
-      CHECK: rubocop
+    #-
+    #  RUBY_VERSION: 24-x64
+    #  CHECK: rubocop
     -
       RUBY_VERSION: 24-x64
       CHECK: spec
